[REFACTOR]: web-ui: remove webkit scrollbar style to fix invisible scrollbar issue

--- a/packages/web-ui/src/core/VirtualTable/index.less
+++ b/packages/web-ui/src/core/VirtualTable/index.less
@@ -44,11 +44,6 @@
         overflow: auto;
         scrollbar-width: thin;
 
-        &::-webkit-scrollbar {
-            width: 8px;
-            height: 8px;
-        }
-
         .table {
             min-height: 100%;
 
